[package]
name = "abstract-algebra"
version = "1.0.0-pre"
edition = "2021"
license = "MIT"
authors = ["ian"]
description = "Abstract algebra structures"
homepage = "https://github.com/doitian/abstract-algebra"
repository = "https://github.com/doitian/abstract-algebra"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
